k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hardened-app
  namespace: hardened-app
spec:
  type: ClusterIP
  selector:
    app: hardened-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
