k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: hardened-app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-ingress
  namespace: hardened-app
spec:
  podSelector:
    matchLabels:
      app: hardened-app
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 5000
